content/_generated-doc/2.13/config/quarkus-smallrye-reactivemessaging-amqp.adoc

:summaryTableId: quarkus-smallrye-reactivemessaging-amqp
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-reactivemessaging-amqp_configuration]]link:#quarkus-smallrye-reactivemessaging-amqp_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.enabled]]`link:#quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.enabled[quarkus.amqp.devservices.enabled]`

[.description]
--
If Dev Services for AMQP has been explicitly enabled or disabled. Dev Services are generally enabled by default, unless there is an existing configuration present. For AMQP, Dev Services starts a broker unless `amqp-host` or `amqp-port` are set or if all the Reactive Messaging AMQP channel are configured with `host` or `port`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_AMQP_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_AMQP_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.port]]`link:#quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.port[quarkus.amqp.devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_AMQP_DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_AMQP_DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.image-name]]`link:#quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.image-name[quarkus.amqp.devservices.image-name]`

[.description]
--
The image to use. Note that only ActiveMQ Artemis images are supported. Specifically, the image repository must end with `artemiscloud/activemq-artemis-broker`. Check https://quay.io/repository/artemiscloud/activemq-artemis-broker to find the available versions.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_AMQP_DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_AMQP_DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`quay.io/artemiscloud/activemq-artemis-broker:0.1.2`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.extra-args]]`link:#quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.extra-args[quarkus.amqp.devservices.extra-args]`

[.description]
--
The value of the `AMQ_EXTRA_ARGS` environment variable to pass to the container.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_AMQP_DEVSERVICES_EXTRA_ARGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_AMQP_DEVSERVICES_EXTRA_ARGS+++`
endif::add-copy-button-to-env-var[]
--|string 
|`--no-autotune --mapped --no-fsync`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.shared]]`link:#quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.shared[quarkus.amqp.devservices.shared]`

[.description]
--
Indicates if the AMQP broker managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for AMQP starts a new container. 
The discovery uses the `quarkus-dev-service-amqp` label. The value is configured using the `service-name` property. 
Container sharing is only used in dev mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_AMQP_DEVSERVICES_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_AMQP_DEVSERVICES_SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.service-name]]`link:#quarkus-smallrye-reactivemessaging-amqp_quarkus.amqp.devservices.service-name[quarkus.amqp.devservices.service-name]`

[.description]
--
The value of the `quarkus-dev-service-aqmp` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for AMQP looks for a container with the `quarkus-dev-service-amqp` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise, it starts a new container with the `quarkus-dev-service-amqp` label set to the specified value. 
This property is used when you need multiple shared AMQP brokers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_AMQP_DEVSERVICES_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_AMQP_DEVSERVICES_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`amqp`

|===